# python-project-lvl1

./: README.md  pyproject.toml
.github/workflows/: github-actions-demo.yml
brain_games/: brain_hello.py  calc_game.py  cli.py  even_game.py  gcd_game.py  main_game.py  progression_game.py
brain_games/games/: even_game.py  gcd_game.py  prime_game.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
