[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain games"
authors = ["Dmitrij Svetov <bandodok@gmail.com>"]
repository = 'https://github.com/bandodok/python-project-lvl1'
classifiers = [
        'Development Status :: 2 - Pre-Alpha',
		'Environment :: Plugins',
		'Intended Audience :: Education',
        'Programming Language :: Python :: 3.9',
    ]
packages = [
	{ include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
